updated for durable storage removal