@@ -20,6 +20,7 @@
         <akka.version>2.8.0</akka.version>
         <scala.binary.version>2.13</scala.binary.version>
         <akka-http.version>10.5.0</akka-http.version>
+        <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED</argLine>
     </properties>
 
     <dependencies>
@@ -131,6 +132,20 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M7</version>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>com.example.shoppingcart.ShoppingCartApp</mainClass>
+                    <arguments>
+                        <argument>arg1</argument>
+                    </arguments>
+                    <systemProperties>
+                        
+                    </systemProperties>
+                </configuration>
             </plugin>
         </plugins>
     </build>
